build: open java.util.regex module for Groovy reflection