@@ -2,6 +2,7 @@
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/java.io=ALL-UNNAMED
 --add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.util.regex=ALL-UNNAMED
 --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
 --add-opens java.base/java.nio=ALL-UNNAMED
 --add-opens java.base/java.util.stream=ALL-UNNAMED
